<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivTaskIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/task_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_task_icon" />

    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivTaskIcon"
        app:layout_constraintEnd_toStartOf="@+id/ivEditTask"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvTaskDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_date"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle"
        app:layout_constraintStart_toEndOf="@+id/ivTaskIcon"
        app:layout_constraintEnd_toStartOf="@+id/ivEditTask"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskDate"
        app:layout_constraintStart_toEndOf="@+id/ivTaskIcon"
        app:layout_constraintEnd_toStartOf="@+id/ivEditTask"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/ivEditTask"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/edit_task"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivDeleteTask"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:srcCompat="@drawable/ic_edit" />

    <ImageView
        android:id="@+id/ivDeleteTask"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/delete_task"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>







